--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>1.5.9.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 </project>
